--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "urls": [
-    ["rp2_dht_reader.py", "dht_reader.py"]
+    ["rp2_dht_reader.py", "rp2_dht_reader.py"]
   ],
   "deps": [],
   "version": "1.0"
